--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "reactstrap": "^9.1.1",
     "web-vitals": "^2.1.4"
   },
+  "overrides": {
+    "autoprefixer": "10.4.5"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
